# kaggle

./: pyproject.toml  titanic
src/kaggle/: __init__.py
src/kaggle/titanic/: titanic.ipynb
