[project]
name = "kaggle"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
